<resources>
    <!-- StuffTrek -->
    <string name="app_name">StuffTrek</string>
    <string name="app_slogan">Track and organize your stuff efficiently.</string>
    <string name="credits">A project by TeamPK - Ngee Ann Polytechnic\nFor our MAD Assignment</string>

    <!-- Menu -->
    <string name="add">Add</string>
    <string name="new_room">New Room</string>
    <string name="new_item">New Item</string>
    <string name="new_container">New Container</string>
    <string name="new_container_cat">New Container Category</string>
    <!-- Authentication & User -->
    <string name="get_started">Get Started</string>
    <string name="skip">Skip Log In</string>
    <string name="sign_out">Sign Out</string>
    <string name="backup">Backup</string>
    <string name="load">Load Backup</string>

    <!-- Location -->
    <string name="location">Location</string>
    <string name="location_title">Your Locations</string>
    <string name="location_desc">Create and view your locations. E.g) Houses, Offices</string>
    <string name="location_input">Location Name:</string>
    <string name="location_prompt">Enter Location Name</string>
    <string name="location_create">Create New Location</string>
    <string name="location_create_error">Location name cannot be empty!</string>
    <string name="no_location">You do not have any locations created.</string>

    <!-- Room -->
    <string name="rooms">Rooms</string>

    <!-- Container Category -->
    <string name="container_cat">Container Category</string>
    <string name="container_cat_input">Container Category Name: </string>
    <string name="container_cat_prompt">Enter Container Category Name</string>
    <string name="container_cat_create_title">Create New Container Category</string>
    <!-- Container -->
    <string name="containers">Containers</string>
    <string name="container_name">Container Name</string>
    <string name="no_container_cat">No containers has been created in this room</string>
    <string name="container_cat_input_error">Container Category\'s name cannot be empty!</string>
    <string name="container_create_hint">Enter Container Name</string>
    <!-- Items -->
    <string name="all_items">All Items</string>
    <string name="unassigned_items">Unassigned Items</string>
    <string name="items">Items</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="no_room_item"> No items are stored in this room </string>
    <string name="no_item">You have no items created </string>
    <string name="all_items_desc">List and details of all created items.</string>
    <string name="your_items">Your Items</string>
    <string name="item_create_hint">Enter Item Name</string>

    <!-- Category -->
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="manageCat">Manage your categories and assign a category to an item for better organization.</string>
    <string name="existingCat">Existing Categories</string>
    <string name="category_name">Category Name: </string>
    <string name="category_add">Add Category</string>
    <string name="category_update">Update Category</string>
    <string name="cat_empty_error">Category name cannot be empty!</string>
    <string name="num_of_items">%1$d items</string>
    <string name="no_category">You do not have any categories.</string>

    <!-- Search -->
    <string name="search">Search</string>
    <string name="num_of_results">%1$d results</string>
    <string name="search_results">0 results</string>

    <string name="settings">Settings</string>
    <string name="count">Count</string>
    <string name="name">Name</string>

    <!-- Content Description -->
    <string name="logo_ContentDesc">StuffTrek Logo</string>
    <string name="cancel_ContentDesc">Cancel</string>
    <string name="back_ContentDesc">Back</string>
    <string name="containerImg_ContentDesc">Container Image</string>
</resources>