<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LocationActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/custom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/location_constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/locationPageTitleTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/location_title"
                android:textAppearance="@style/Theme.StuffTrek.TitleText"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/locationPageDescTv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/locationPageDescTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/location_desc"
                app:layout_constraintBottom_toTopOf="@+id/noLocationTv"
                app:layout_constraintEnd_toEndOf="@+id/locationPageTitleTv"
                app:layout_constraintStart_toStartOf="@+id/locationPageTitleTv"
                app:layout_constraintTop_toBottomOf="@+id/locationPageTitleTv" />

            <TextView
                android:id="@+id/noLocationTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/no_location"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="@+id/locationPageDescTv"
                app:layout_constraintStart_toStartOf="@+id/locationPageDescTv"
                app:layout_constraintTop_toBottomOf="@+id/locationPageDescTv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/locationRv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationPageDescTv"
                app:layout_constraintVertical_bias="0.0">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>